# serializer version: 1
# name: test_invalid_call_syntax_falls_back_to_repr
  '''
  Failing test case: inner(
      x='hello world',
  )
  '''
# ---
# name: test_map_to_bytes_prints_as_repr
  '''
  Failing test case: inner(
      b=hashlib.sha256(b'').digest(),
  )
  '''
# ---
# name: test_map_to_str_prints_as_repr
  '''
  Failing test case: inner(
      s='0',
  )
  '''
# ---
# name: test_reprs_as_created
  '''
  Failing test case: inner(
      foo=Foo(x=1),
      bar=Bar(x=-1),
      baz=Foo(None),
  )
  '''
# ---
# name: test_reprs_as_created_consistent_calls_despite_indentation
  '''
  Failing test case: inner(
      a=some_foo('aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa'),
      b=Bar(
          some_foo(
              'aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa',
          ),
      ),
  )
  '''
# ---
# name: test_reprs_as_created_interactive
  '''
  Failing test case: inner(
      data=data(...),
  )
  Draw 1: Bar(10)
  '''
# ---
